description-CUD/minikube/description-cud-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: description-cud
  name: description-cud
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: description-cud
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/spring-net: "true"
        io.kompose.service: description-cud
    spec:
      containers:
        - env:
            - name: SPRING_DATASOURCE_URL
              value: jdbc:mysql://description-mysql:3306/descriptiondb?allowPublicKeyRetrieval=true&autoReconnect=true&useSSL=false
          image: description-cud
          name: description-cud
          ports:
            - containerPort: 8081
          resources: {}
      restartPolicy: Always
status: {}
