description-CUD/minikube/description-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: description-mysql
  name: description-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: description-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/spring-net: "true"
        io.kompose.service: description-mysql
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: descriptiondb
            - name: MYSQL_ROOT_PASSWORD
              value: m@nipassword
            - name: MYSQL_ROOT_USERNAME
              value: root
          image: mysql:latest
          name: description-mysql
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: userdata
            - mountPath: /etc/mysql/conf.d
              name: userdata
      restartPolicy: Always
      volumes:
        - name: userdata
          persistentVolumeClaim:
            claimName: userdata
        - name: userdata
          persistentVolumeClaim:
            claimName: userdata
status: {}
